tests/sumo/spec/departure/errors/depart_unsorted/log.sumo.meso
Loading net-file from 'net.net.xml' ... done (1ms).
Loading additional-files from 'input_routes.rou.xml' ... done (0ms).
Loading route-files incrementally from 'input_additional.add.xml'
Loading done.
Simulation version v1_26_0+1034-8d7c6592743 started with time: 0.00.
Warning: Route file should be sorted by departure time, ignoring 'b'!
Simulation ended at time: 144.00.
Reason: All vehicles have left the simulation.
